--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
         "name": "c Build&Debug",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/poc",
+        "program": "${workspaceFolder}/build/poc",
         "args": [],
         "stopAtEntry": true,
-        "cwd": "${workspaceFolder}",
+        "cwd": "${workspaceFolder}/build",
         "environment": [],
         "externalConsole": false,
         "MIMode": "gdb",
